# whirlpool-sixth-sense

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  MCP_README.md  README.md  cli DONT SHARE.py  cli.py  cli_ac.py  cli_ac_menu.py  cli_beer_fridge_menu.py  cli_dryer_menu.py  cli_oven_menu.py  cli_refrigerator_menu.py  cli_washer_menu.py  cli_washerdryer_menu.py  dryer_device_data_model.json  dryer_paths.json  mcp_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  washer_device_data_model.json  washer_paths.json  whirlpool_ac.py  whirlpool_cooktop.py
.github/workflows/: ci.yml  lint.yml  publish-to-test-pypi.yml  tests.yml
tests/: __init__.py  aiohttp.py  conftest.py  mock_backendselector.py  test_aircon.py  test_appliancesmanager.py  test_auth.py  test_datamodel.py  test_dryer.py  test_oven.py  test_refrigerator.py  test_washer.py  utils.py
tests/data/: aircon_data.json  data_model.json  dryer_data.json  mock_data.json  oven_data.json  owned_appliances.json  refrigerator_data.json  shared_appliances.json  washer_data.json
whirlpool/: __init__.py  aircon.py  appliance.py  appliancesmanager.py  auth.py  backendselector.py  beer_fridge.py  cooktop.py  dryer.py  eventsocket.py  microwave.py  oven.py  qwer  refrigerator.py  types.py  washer.py  washerdryer.py
