[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "whirlpool_sixth_sense"
version = "0.18.12"
authors = [{ name = "Abílio Costa", email = "amfcalt@gmail.com" }]
description = "Unofficial API for Whirlpool's 6th Sense appliances"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "aioconsole>=0.3.1",
    "aiohttp>=3.9.1",
    "websockets>=8.1",
    "async-timeout>=4.0.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/abmantis/whirlpool-sixth-sense/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",]



[tool.ruff.lint.mccabe]
max-complexity = 25
