[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whirlpool_sixth_sense"
version = "1.0.1"
license = "MIT"
authors = [{ name = "Abílio Costa", email = "amfcalt@gmail.com" }]
description = "Unofficial API for Whirlpool's 6th Sense appliances"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.1",
    "websockets>=8.1",
    "async-timeout>=4.0.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/abmantis/whirlpool-sixth-sense/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests"]
namespaces = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",]


[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pyright]
typeCheckingMode = "standard"

[tool.semantic_release]
branch = "master"
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
changelog_file = "none"
upload_to_vcs_release = false
tag_format = "{version}"
